src/objects/Branch__c.object
<CustomObject>
    <description>Different Branches and respective ID</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branch_Location__c</fullName>
        <label>Branch Location</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Branch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BRANCH-{00}</displayFormat>
        <label>Branch ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>